Made changes to the templates page
Added space for an OnClick event when each template image is selected. Also added notes for both Etin and Henry Otunuya.

--- a/templates.html
+++ b/templates.html
@@ -35,23 +35,34 @@
 	</div>
     <div id="gallery">
     	<ul class="style4">
-        	<li><a href="#"><img src="images/cv1.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv2.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv3.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv4.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv5.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv6.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv7.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv8.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv9.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv10.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv11.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv12.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv13.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv14.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv15.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv16.jpg"></a></li>
-        	<li><a href="#"><img src="images/cv17.jpg"></a></li>
+        	<!--Note to Etin-->
+            	<!--
+                	So what I'm thinking of here is that there'd be a JS function that will redirect to the newly created resumeform.html page, that also contains the id of the template 
+                    that was selected. That id can also be transferred via a hidden form on that page, to select the template that will be used for display of the resume contents. Ideally,
+                    I'd have preferred to use PHP to achieve all of this, but in the mean time, I guess JS and get requests might be able to suffice. What do you think?
+                -->
+        	<!--Note to Henry Otunuya-->
+            	<!--
+                	I think there should also be some form of template page that conforms to the layout present in these template documents. The templates will end up being what the data that
+                    is input via the resumeform document will end up being displayed as. What do you think?
+                -->
+        	<li id="cv1"><a href="#" onClick=""><img src="images/cv1.jpg"></a></li>
+        	<li id="cv2"><a href="#" onClick=""><img src="images/cv2.jpg"></a></li>
+        	<li id="cv3"><a href="#" onClick=""><img src="images/cv3.jpg"></a></li>
+        	<li id="cv4"><a href="#" onClick=""><img src="images/cv4.jpg"></a></li>
+        	<li id="cv5"><a href="#" onClick=""><img src="images/cv5.jpg"></a></li>
+        	<li id="cv6"><a href="#" onClick=""><img src="images/cv6.jpg"></a></li>
+        	<li id="cv7"><a href="#" onClick=""><img src="images/cv7.jpg"></a></li>
+        	<li id="cv8"><a href="#" onClick=""><img src="images/cv8.jpg"></a></li>
+        	<li id="cv9"><a href="#" onClick=""><img src="images/cv9.jpg"></a></li>
+        	<li id="cv10"><a href="#" onClick=""><img src="images/cv10.jpg"></a></li>
+        	<li id="cv11"><a href="#" onClick=""><img src="images/cv11.jpg"></a></li>
+        	<li id="cv12"><a href="#" onClick=""><img src="images/cv12.jpg"></a></li>
+        	<li id="cv13"><a href="#" onClick=""><img src="images/cv13.jpg"></a></li>
+        	<li id="cv14"><a href="#" onClick=""><img src="images/cv14.jpg"></a></li>
+        	<li id="cv15"><a href="#" onClick=""><img src="images/cv15.jpg"></a></li>
+        	<li id="cv16"><a href="#" onClick=""><img src="images/cv16.jpg"></a></li>
+        	<li id="cv17"><a href="#" onClick=""><img src="images/cv17.jpg"></a></li>
         </ul>
     </div>
     <div style="clear:both;"></div>
