Made updates to all the files
For the index page, changed the build button into an anchor tag and linked it to the templates page
For the templates page, changed the individual template li elements into forms that can be used to pass their values from page to page. This can be better achieved with either PHP or JS though.
For the resumeform page, styled it appropriately and tried to retrieve the template value from the previous templates page that led to it
For the contact-us page, made slight changes to the nav element. If we were using PHP, would have used includes for everything, then have a smart nav.php file
Made numerous changes to the style.css file.

--- a/contact-us.html
+++ b/contact-us.html
@@ -17,7 +17,7 @@
 		<ul>
 			<li><a href="index.html" accesskey="1" title="">Homepage</a></li>
 			<li><a href="#" accesskey="2" title="">About Us</a></li>
-			<li><a href="templates.html" accesskey="3" title="">Templates</a></li>
+			<li><a href="templates.html" accesskey="3" title="">Build</a></li>
 			<li class="current_page_item"><a href="#" accesskey="4" title="">Contact Us</a></li>
 		</ul>
 	</nav>
