--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	</div>
 	<nav id="menu">
 		<ul>
-			<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-			<li><a href="#" accesskey="2" title="">About Us</a></li>
-			<li><a href="templates.html" accesskey="3" title="">Templates</a></li>
-			<li><a href="contact-us.html" accesskey="4" title="">Contact Us</a></li>
+			<li class="current_page_item"><a href="#" accesskey="1" title="Homepage">Homepage</a></li>
+			<li><a href="#" accesskey="2" title="About Us">About Us</a></li>
+			<li><a href="templates.html" accesskey="3" title="Build">Build</a></li>
+			<li><a href="contact-us.html" accesskey="4" title="Contact Us">Contact Us</a></li>
 		</ul>
 	</nav>
 </div></div>
@@ -32,10 +32,10 @@
 					<li>Dozens of HR-approved resume templates.</li>
 					<li>Land your dream job with the perfect resume employers are looking for!</li>
 				</ul>
-                <button class="button build">Build My Resume</button>
+                <a href="templates.html" class="button build" >Build My Resume</a>
 		</div>
         <div class="">
-			<a href="#" class="image image-left"><img src="images/resume1.jpg" alt="" /></a>
+			<a href="templates.html" class="image image-left"><img src="images/resume1.jpg" alt="" /></a>
         </div>
 	</div>
     <div class="sidebar">
