--- a/templates.html
+++ b/templates.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Resume Pro! | Templates</title>
+<title>Resume Pro! | Build Resume</title>
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
 <link href="style.css" rel="stylesheet" type="text/css" media="all" />
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
@@ -17,7 +17,7 @@
 		<ul>
 			<li><a href="index.html" accesskey="1" title="">Homepage</a></li>
 			<li><a href="#" accesskey="2" title="">About Us</a></li>
-			<li class="current_page_item"><a href="#" accesskey="3" title="">Templates</a></li>
+			<li class="current_page_item"><a href="#" accesskey="3" title="">Build</a></li>
 			<li><a href="contact-us.html" accesskey="4" title="">Contact Us</a></li>
 		</ul>
 	</nav>
@@ -46,6 +46,144 @@
                 	I think there should also be some form of template page that conforms to the layout present in these template documents. The templates will end up being what the data that
                     is input via the resumeform document will end up being displayed as. What do you think?
                 -->
+        	<h2>Step 1: Choose template...</h2>
+            <li id="cv1">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv1" value="cv1">
+                        <input type="image" src="images/cv1.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv2">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv2" value="cv2">
+                        <input type="image" src="images/cv2.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv3">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv3" value="cv3">
+                        <input type="image" src="images/cv3.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv4">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv4" value="cv4">
+                        <input type="image" src="images/cv4.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv5">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv5" value="cv5">
+                        <input type="image" src="images/cv5.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv6">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv6" value="cv6">
+                        <input type="image" src="images/cv6.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv7">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv7" value="cv7">
+                        <input type="image" src="images/cv7.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv8">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv8" value="cv8">
+                        <input type="image" src="images/cv8.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv9">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv9" value="cv9">
+                        <input type="image" src="images/cv9.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv10">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv10" value="cv10">
+                        <input type="image" src="images/cv10.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv11">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv11" value="cv11">
+                        <input type="image" src="images/cv11.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv12">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv12" value="cv12">
+                        <input type="image" src="images/cv12.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv13">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv13" value="cv13">
+                        <input type="image" src="images/cv13.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv14">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv14" value="cv14">
+                        <input type="image" src="images/cv14.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv15">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv15" value="cv15">
+                        <input type="image" src="images/cv15.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv16">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv16" value="cv16">
+                        <input type="image" src="images/cv16.jpg">
+                    </form>
+                </a>
+        	</li>
+        	<li id="cv17">
+                <a href="#" onClick="">
+                    <form action="resumeform.html" method="get">
+                        <input type="hidden" name="template" id="cv17" value="cv17">
+                        <input type="image" src="images/cv17.jpg">
+                    </form>
+                </a>
+        	</li>
+            <!--
         	<li id="cv1"><a href="#" onClick=""><img src="images/cv1.jpg"></a></li>
         	<li id="cv2"><a href="#" onClick=""><img src="images/cv2.jpg"></a></li>
         	<li id="cv3"><a href="#" onClick=""><img src="images/cv3.jpg"></a></li>
@@ -63,7 +201,8 @@
         	<li id="cv15"><a href="#" onClick=""><img src="images/cv15.jpg"></a></li>
         	<li id="cv16"><a href="#" onClick=""><img src="images/cv16.jpg"></a></li>
         	<li id="cv17"><a href="#" onClick=""><img src="images/cv17.jpg"></a></li>
-        </ul>
+            -->
+        </ul>       
     </div>
     <div style="clear:both;"></div>
          
