Styled the Signup Page
Styled the signup page and also updated the link on the index page.

--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
                         <input type="text" placeholder="Email Address: " id="txtEmail"/>
                         <input type="password" placeholder="Password: " id="txtPassword"/>
                         <button id="btnLogin" class='button'>Login</button>
-                        <div class="m-top"><a href="#">Forgot Password?</a></div>
-                        <div class="m-top">Don't have an account? <a href="#">Create account</a></div>
-                
+                        <p>
+                            <div class="m-top"><a href="#">Forgot Password?</a></div>
+                            <div class="m-top">Don't have an account? <a href="signup.html">Create account</a></div>
+                        </p>
                     </form>
 				</div>
 			</li>
